--- a/config_files/people.yaml
+++ b/config_files/people.yaml
@@ -13,6 +13,7 @@ people:
     agreeableness: 90
     extraversion: 60
     history: "I love to garden."
+    personality: "I am shy and excitable and very giggly! Hehe!"
     relationships:
       Steve Carrlec: "My husband. I love him to the ends of the earth and go crazy when I see him."
       John Bravo: "My ex-boyfriend. I am secretly still in love with him as well and I want him to move back to the UK."
@@ -29,6 +30,7 @@ people:
     agreeableness: 45
     extraversion: 20
     history: "I am a physicist."
+    personality: "I am serious and intelligent and speak with great authority."
     relationships:
       Jessica Rust: "My wife. I find her clingy and overbearing, but I am committed to the marriage."
       John Bravo: "My wife's ex. I really do not like him and I get upset when I see him."
@@ -45,6 +47,7 @@ people:
     agreeableness: 70
     extraversion: 90
     history: "I recently moved to Australia and I love it here."
+    personality: "I am a bit camp and love to make jokes and try to make people laugh."
     relationships:
       Jessica Rust: "My ex girlfriend. I think she still likes me but I am totally uninterested in her and I tell her this."
       Steve Carrlec: "He is a nice guy and I want him to like me, but I can tell he doesn't like me."
@@ -61,6 +64,7 @@ people:
     agreeableness: 80
     extraversion: 55
     history: "I like art."
+    personality: "I am a old and quite weary women.  I am kind but I take a while to get to know."
     relationships:
       Jessica Rust: "My niece. She doesn't like me and I don't understand why."
       Steve Carrlec: "I like him a lot, he is very friendly and we always have a good time."
